2009-01-10 19:02  rockyb

	* ChangeLog, NEWS: Get ready for release

2009-01-08 09:27  rockyb

	* ChangeLog, NEWS, VERSION, lib/columnize.rb,
	  test/test-columnize.rb: Fix bad bug in arranging horizontally

2009-01-01 04:15  rockyb

	* NEWS: Merge NEWS

2009-01-01 03:59  rockyb

	* NEWS, VERSION: Ooops 0.2 release done. Go for 0.2.1

2009-01-01 03:55  rockyb

	* ChangeLog: Get ready for release 0.2

2009-01-01 03:52  rockyb

	* ChangeLog, NEWS, VERSION, lib/columnize.rb,
	  test/test-columnize.rb: Get ready for release 0.2

2008-03-16 21:14  rockyb

	* lib/columnize.rb: *** empty log message ***

2008-03-16 21:13  rockyb

	* lib/columnize.rb: Simplify __FILE__ == $0. (rdebug now changes $0
	  and rcov has an option)

2008-02-11 19:25  rockyb

	* lib/columnize.rb: Remove 1.9's shadow warning

2007-12-09 17:33  rockyb

	* README, Rakefile: Fix up doc a little. Make the default rake task
	  "test".

2007-12-09 16:49  rockyb

	* lib/columnize.rb: Doc fix.

2007-12-09 16:47  rockyb

	* ChangeLog, lib/columnize.rb, test/test-columnize.rb:
	  columnize.rb: Allow one to specify a separator string. Remove
	  restriction that
	  all entries in the array have to be a string.
	  test-columnize.rb: more tests - invalid list, empty list, with
	  separator
	  string parameter.

2007-12-09 14:51  rockyb

	* test/test-columnize.rb: Typo.

2007-12-09 14:48  rockyb

	* ., NEWS, README, lib/columnize.rb, test/test-columnize.rb:
	  Property changes for Id lines and to make test-columnize.rb
	  executable.

2007-12-09 14:40  rockyb

	* ., AUTHORS, COPYING, ChangeLog, NEWS, README, Rakefile, VERSION,
	  lib, lib/columnize.rb, test, test/test-columnize.rb: Initial
	  release of Columnize, a module to print an Array in column-sorted
	  order.
