@@ -1,3 +1,7 @@
+2009-07-26 14;48  mark-moseley
+
+    * ChangeLog, lib/columnize.rb: updated for Ruby 1.9.x
+
 2009-01-10 19:02  rockyb
 
 	* ChangeLog, NEWS: Get ready for release
